<?xml version="1.0"?>
<package format="3">
  <name>rsn_smacc2</name>
  <version>0.0.0</version>
  <description>obotic scrub nurse state machine using SMACC2</description>
  <maintainer email="jszdhyjs@gmail.com">huitao</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>smacc2</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>boost</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
